--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
   window_manager: ^0.4.2
-  animated_theme_switcher: "^2.0.8"
+  animated_theme_switcher: ^2.0.8
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
   json_annotation: ^4.9.0
-  file_picker: ^9.2.1
+  file_picker: ^10.0.0
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
